Bug 440837 - Leaving Do Not Disturb mode causes all the notifications that were suppressed to pop up on screen
Summary: Leaving Do Not Disturb mode causes all the notifications that were suppressed...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Notifications (other bugs)
Version First Reported In: master
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2021-08-10 14:55 UTC by Nate Graham
Modified: 2025-02-24 23:16 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2021-08-10 14:55:17 UTC
STEPS TO REPRODUCE
1. Open a chat client and navigate to a chatty chatroom like the VDG room
2. Enter Do Not Disturb mode
3. Wait 15 minutes
4. Leave Do Not Disturb mode


OBSERVED RESULT
A flood of on-screen notifications ensues, causing the right-hand side of the screen to be full of rapidly scrolling and disappearing notifications for the next minute.


EXPECTED RESULT
Nothing happens; I don't need to see all of the notifications I missed. I missed them on purpose; that's why I entered Do Not Disturb mode.

I could *maybe* see the case for showing these notifications in the history popup (if they are marked as appearing in the history view), but putting them all on screen seems quite noisy and excessive to me.
Comment 1 Bug Janitor Service 2022-03-14 15:20:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1565
Comment 2 Fushan Wen 2022-03-16 07:39:13 UTC
Git commit b8b722ba194d5cba15f5d08d6ea2774982888203 by Fushan Wen.
Committed on 16/03/2022 at 07:36.
Pushed by fusionfuture into branch 'master'.

libnotificationmanager: Expire all notifications when "Do not disturb" is on

After leaving "Do not disturb" mode, a flood of on-screen notifications
ensues, causing the right-hand side of the screen to be full of rapidly
scrolling and disappearing notifications for the next minute.

The user doesn't need to see any notification popup that is suppressed
by DnD mode, because the notification can be viewed from the drawer anyway.
FIXED-IN: 5.25

M  +14   -2    libnotificationmanager/abstractnotificationsmodel.cpp
M  +1    -0    libnotificationmanager/abstractnotificationsmodel.h
M  +1    -0    libnotificationmanager/abstractnotificationsmodel_p.h
M  +3    -0    libnotificationmanager/notificationsmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/b8b722ba194d5cba15f5d08d6ea2774982888203
Comment 3 Bug Janitor Service 2022-09-10 15:22:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2099
Comment 4 Nate Graham 2022-09-12 21:07:01 UTC
Git commit a38fbf4884606772177d9175768332aa9871af77 by Nate Graham, on behalf of Fushan Wen.
Committed on 12/09/2022 at 20:47.
Pushed by ngraham into branch 'master'.

Revert "libnotificationmanager: Expire all notifications when "Do not disturb" is on"

This reverts commit b8b722ba194d5cba15f5d08d6ea2774982888203.

This breaks the whitelist.

M  +2    -14   libnotificationmanager/abstractnotificationsmodel.cpp
M  +0    -1    libnotificationmanager/abstractnotificationsmodel.h
M  +0    -1    libnotificationmanager/abstractnotificationsmodel_p.h
M  +0    -3    libnotificationmanager/notificationsmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/a38fbf4884606772177d9175768332aa9871af77
Comment 5 Nate Graham 2022-09-12 21:08:06 UTC
We had to revert the fix as it broke the "Show in do not disturb mode" feature. We will have to find another way.
Comment 6 Oliver Beard 2023-02-05 18:26:50 UTC
From a user perspective, I would suggest holding all the unread notifications during 'Do Not Disturb' into the applet, and once 'Do Not Disturb' expires, sending a notification with 'X Unread Notifications', and an action to open the applet to show these unread notifications.
Comment 7 Nate Graham 2023-02-06 16:40:36 UTC
Yeah, that makes sense to me!
Comment 8 Bug Janitor Service 2024-11-30 04:25:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4965
Comment 9 Fushan Wen 2025-01-08 17:37:19 UTC
Git commit 5145d877d82dd5111118c93d0da7c988cf0640e5 by Fushan Wen.
Committed on 08/01/2025 at 16:10.
Pushed by fusionfuture into branch 'master'.

applets/notifications: suppress inhibited notifications after "Do not disturb" is off

After leaving "Do not disturb" mode, a flood of on-screen notifications
ensues, causing the right-hand side of the screen to be full of rapidly
scrolling and disappearing notifications for the next minute.

The user doesn't need to see any notification popup that is suppressed
by DnD mode, because the notification can be viewed from the drawer anyway.
FIXED-IN: 6.3

M  +1    -1    appiumtests/applets/CMakeLists.txt
M  +13   -9    appiumtests/applets/kicker/favoritetest.py
M  +60   -11   appiumtests/applets/notificationstest.py
M  +8    -0    applets/notifications/package/contents/ui/FullRepresentation.qml
M  +10   -1    applets/notifications/package/contents/ui/global/Globals.qml
M  +4    -0    libnotificationmanager/CMakeLists.txt
M  +11   -1    libnotificationmanager/abstractnotificationsmodel.cpp
A  +11   -0    libnotificationmanager/libnotificationmanager.notifyrc
M  +10   -0    libnotificationmanager/notification.cpp
M  +3    -0    libnotificationmanager/notification.h
M  +2    -0    libnotificationmanager/notification_p.h
M  +18   -0    libnotificationmanager/notificationfilterproxymodel.cpp
M  +5    -0    libnotificationmanager/notificationfilterproxymodel_p.h
M  +37   -1    libnotificationmanager/notifications.cpp
M  +20   -0    libnotificationmanager/notifications.h
M  +1    -0    libnotificationmanager/server_p.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5145d877d82dd5111118c93d0da7c988cf0640e5
Comment 10 gabriel.cannabrava 2025-02-24 23:16:06 UTC
I don't like this feature. I liked being able to see what I missed when I'm done with DND.

I can't just use the drawer because it groups notifications by app and it can be hard to tell which notifications are the new ones and which ones are from before which just happens to be there because it's the same app, which I also find annoying, but that's a completely different matter.

This should either be a setting I can turn off to go back to how it was before, or perhaps make it so that if I click the notification telling me about the other notifications I missed, it'll make all the missed notifications appear like they used to.