libnotificationmanager/abstractnotificationsmodel.h
@@ -44,6 +44,7 @@ public:
 
     void startTimeout(uint notificationId);
     void stopTimeout(uint notificationId);
+    void setInhibited(bool inhibited);
 
     void clear(Notifications::ClearFlags flags);
 
